--- a/SelfStart/SelfStartFrontEnd/app/templates/components/admin-table.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/admin-table.hbs
@@ -1,5 +1,5 @@
-<div class="ui very padded container segment" id="top" style="margin-top: -18em;z-index:  2;position: relative;margin-left: 200px !important;">
-<div class="ui grid" style="margin-top: -30px;">
+<div class="ui very padded container segment" id="top">
+  <div class="ui grid" style="margin-top: -30px;">
     <div class="left thirteen wide column" style="margin-top: -5px;">
       <p style="padding-top: 13px;color:  white;font-size: 1.5em;font-weight: bolder;">
         Admins
