--- a/SelfStart/SelfStartFrontEnd/app/templates/components/add-city.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/add-city.hbs
@@ -1,14 +1,14 @@
 <div class="ui button" {{action 'openModal'}}>
-  Add province
+  Add City
 </div>
 
 
-{{#ui-modal name="newProvince" class="small newProvince"}}
+{{#ui-modal name="newCity" class="small newCity"}}
   <i class="close icon"></i>
   <link integrity="" rel="stylesheet" href="{{rootURL}}../assets/css/form-style.css"> <!-- Resource style -->
 
   <div class="header">
-    Adding New Province
+    Adding New City
   </div>
   <div class="content">
 
@@ -16,22 +16,21 @@
     <form id="edit" class="cd-form floating-labels" {{action "submit" on="submit"}}>
 
       <div class="field" style="margin-bottom: 1em">
-        <h4>Province</h4>
-        {{input class="world" type="text" value = name placeholder="Add province" required=true}}
+        <h4>City</h4>
+        {{input class="world" type="text" value = name placeholder="Add city" required=true}}
       </div>
 
       <div class="field" style="margin: 1em 0;">
-        <h4>Country</h4>
+        <h4>Province</h4>
         <p class="cd-select icon">
-          <select class="world" onchange={{action 'selectCountry' value="target.value"}} required=true>
-            <div class="ui default text">Select a Country</div>
-            {{#each countries as |oneCountry|}}
-              <option value={{oneCountry.id}} selected={{eq country oneCountry.name}}>
-                {{oneCountry.name}}
+          <select class="world" onchange={{action 'selectProvince' value="target.value"}} required=true>
+            {{#each provinces as |oneProvince|}}
+              <option value={{oneProvince.id}} selected={{eq province oneProvince.name}}>
+                {{oneProvince.name}}
               </option>
             {{/each}}
           </select>
-        <</p>
+          <</p>
       </div>
 
       <div class="field">
