--- a/SelfStart/SelfStartFrontEnd/app/templates/components/config-selection.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/config-selection.hbs
@@ -37,7 +37,7 @@
       <div class="content">
         <div class="header">Cities</div>
       </div>
-      <div class="ui bottom attached button">
+      <div class="ui bottom attached button" {{action "citySelect"}}>
         <i class="add icon"></i>
         Add City
       </div>
@@ -199,7 +199,7 @@
           <p style="padding-top: 13px;color:  white;font-size: 1.5em;font-weight: bolder;">Provinces</p>
         </div>
         <div class="right two wide column" style="padding-left: 50px;">
-          {{add-province}}
+          {{add-province countries=model.country}}
         </div>
       </div>
       <br><br><br><br>
@@ -223,10 +223,54 @@
               {{province.name}}
             </td>
             <td class="right aligned one wide column">
-              <p>{{edit-province ID=province.id}}</p>
+              <p>{{edit-province provinceData=province countries=model.country}}</p>
             </td>
             <td class="left aligned one wide column">
               <p>{{delete-province ID=province.id}}</p>
+            </td>
+          </tr>
+        {{/each}}
+        </tbody>
+      </table>
+    </div>
+
+  {{/if}}
+
+  {{#if citySelected}}
+    <div class="ui very padded container segment" id="top" style="padding-bottom: 1em;">
+      <div class="ui grid" style="margin-top: -30px;">
+        <div class="left thirteen wide column" style="margin-top: -5px;">
+          <p style="padding-top: 13px;color:  white;font-size: 1.5em;font-weight: bolder;">Cities</p>
+        </div>
+        <div class="right two wide column" style="padding-left: 50px;">
+          {{add-city provinces=model.province}}
+        </div>
+      </div>
+      <br><br><br><br>
+
+      <table class="ui fixed table" id="tb" style="border: none;border-color: white;">
+        <tbody>
+        <tr style="font-weight: bold;">
+          <td class="left aligned fourteen wide column">Name</td>
+          <td class="center aligned two wide column">Actions</td>
+        </tr>
+        </tbody>
+      </table>
+
+      <div class="ui divider"></div>
+
+      <table class="ui fixed table" id="tb" style="margin: 0 0;border: none;">
+        <tbody >
+        {{#each model.city as |city|}}
+          <tr>
+            <td class="left aligned fourteen wide column">
+              {{city.name}}
+            </td>
+            <td class="right aligned one wide column">
+              <p>{{edit-city cityData=city provinces=model.province}}</p>
+            </td>
+            <td class="left aligned one wide column">
+              <p>{{delete-city ID=city.id}}</p>
             </td>
           </tr>
         {{/each}}
