--- a/SelfStart/SelfStartFrontEnd/app/templates/components/edit-city.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/edit-city.hbs
@@ -1,37 +1,34 @@
-<div class="ui button" {{action 'openModal'}}>
-  Add province
-</div>
+<p style="cursor: pointer; " title="Edit"  {{action 'openModal' }}>
+  <img src="/assets/images/pencil.svg">
+</p>
 
-
-{{#ui-modal name="newProvince" class="small newProvince"}}
+{{#ui-modal name= modalName class=modalName }}
   <i class="close icon"></i>
   <link integrity="" rel="stylesheet" href="{{rootURL}}../assets/css/form-style.css"> <!-- Resource style -->
 
   <div class="header">
-    Adding New Province
+    Edit City: "{{cityData.name}}"
   </div>
   <div class="content">
-
 
     <form id="edit" class="cd-form floating-labels" {{action "submit" on="submit"}}>
 
       <div class="field" style="margin-bottom: 1em">
-        <h4>Province</h4>
-        {{input class="world" type="text" value = name placeholder="Add province" required=true}}
+        <h4>City</h4>
+        {{input class="world" type="text" value = cityData.name placeholder="Add city" required=true}}
       </div>
 
       <div class="field" style="margin: 1em 0;">
-        <h4>Country</h4>
+        <h4>Province</h4>
         <p class="cd-select icon">
-          <select class="world" onchange={{action 'selectCountry' value="target.value"}} required=true>
-            <div class="ui default text">Select a Country</div>
-            {{#each countries as |oneCountry|}}
-              <option value={{oneCountry.id}} selected={{eq country oneCountry.name}}>
-                {{oneCountry.name}}
+          <select class="world" onchange={{action 'selectProvince' value="target.value"}} required=true>
+            {{#each provinces as |oneProvince|}}
+              <option value={{oneProvince.id}} selected={{eq cityData.province.name oneProvince.name}}>
+                {{oneProvince.name}}
               </option>
             {{/each}}
           </select>
-        <</p>
+          <</p>
       </div>
 
       <div class="field">
@@ -42,4 +39,5 @@
 
     </form>
   </div>
+
 {{/ui-modal}}
