Fix assigning rehab plan to client

--- a/SelfStart/SelfStartFrontEnd/app/templates/components/welcome-page.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/welcome-page.hbs
@@ -134,7 +134,7 @@
             <div class="number" style="text-align: center">1</div>
           </div>
           <div class="row">
-            <p style="text-align: center;margin-left:15%;margin-right:15%;line-height: 1.5em;font-size: 1.1em;color:  white;">Book an appointment by loging in or creating an account</p>
+            <p style="text-align: center;margin-left:15%;margin-right:15%;line-height: 1.5em;font-size: 1.1em;color:  white;">Book an appointment by logging in or creating an account</p>
           </div>
         </div>
         <div class="column">
