when looking at the client file the practitioner can view the results of that client's assessment test in the assessment tab

--- a/SelfStart/SelfStartFrontEnd/app/templates/components/display-answers.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/display-answers.hbs
@@ -6,7 +6,7 @@
     <label>{{question.questionText}}</label>
     <br><br>
     <div class="ui disabled input focus">
-      <li>{{input type="text" value=SAanswer}}</li>
+      {{input type="text" value=SAanswer}}
     </div>
   {{/if}}
 
@@ -17,6 +17,7 @@
       class="heart"
       maxRating=10
       initialRating = Rating
+      interactive = false
     }}
   {{/if}}
 
