--- a/SelfStart/SelfStartFrontEnd/app/templates/components/client-file.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/client-file.hbs
@@ -11,7 +11,8 @@
 
 <div class="ui container" style="padding-top: 2em">
   <div class="ui top attached tabular stackable menu" style="padding-left: 20%;">
-    <a class="item">
+  
+    <a class="{{assessState}} item" {{action "assessView"}}>
       Assessment
     </a>
     <a class="item">
@@ -112,9 +113,14 @@
           </tbody>
         </table>
       </div>
-
     </div>
     {{/if}}
+
+{{#if assess}}
+  {{!-- {{#each model.rehabclientlink as |link index|}} --}}
+     {{get-assessment-results patient = model}}  
+  {{!-- {{/each}} --}}
+{{/if}}
 
   </div>
 </div>
@@ -138,6 +144,3 @@
     <div class="cancel " style="padding:.6em; float:left; width: 50%;  cursor: pointer; background: #b6bece; color:white; text-align: center;">No</div>
   </div>
 {{/ui-modal}}
-
-
-{{get-assessment-results}}
