--- a/SelfStart/SelfStartFrontEnd/app/templates/components/get-assessment-results.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/get-assessment-results.hbs
@@ -1,3 +1,12 @@
-{{#each assessmentModel.questions as |assess index|}}
-     {{display-answers question=assess qID = assess.id assessment=assessmentModel qNumber = index assessid = assessmentModel.id}}
-{{/each}}
+{{#if notOpen}}
+    <div class="ui button" {{action 'Open'}}>
+    Assessment Test
+    </div>
+{{/if}}
+
+
+{{#if open}}
+    {{#each assessmentModel.questions as |assess index|}}
+        {{display-answers question=assess qID = assess.id assessment=assessmentModel qNumber = index assessid = assessmentModel.id}}
+    {{/each}}
+{{/if}}
