--- a/SelfStart/SelfStartFrontEnd/app/templates/components/config-selection.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/config-selection.hbs
@@ -52,6 +52,15 @@
       </div>
     </div>
 
+    <div class="card" style="width:200px">
+      <div class="content">
+        <div class="header">Client Quote</div>
+      </div>
+      <div class="ui bottom attached button" {{action "quoteSelect"}}>
+        <i class="add icon"></i>Add quote
+      </div>
+    </div>
+
   </div>
 
 
@@ -243,7 +252,7 @@
           <p style="padding-top: 13px;color:  white;font-size: 1.5em;font-weight: bolder;">Cities</p>
         </div>
         <div class="right two wide column" style="padding-left: 50px;">
-          {{add-city provinces=model.province}}
+          {{add-city provinces=model.province countries=model.country}}
         </div>
       </div>
       <br><br><br><br>
@@ -277,5 +286,28 @@
         </tbody>
       </table>
     </div>
+
+  {{/if}}
+
+  {{#if quoteSelected}}
+    <link integrity="" rel="stylesheet" href="/assets/css/form-style.css"> <!-- Resource style -->
+
+    <h1>{{model.admin.message}}</h1>
+
+    <form class="cd-form floating-labels" {{action "submit" on="submit"}}  style="padding-right: 10em; padding-left: 10em">
+
+      <div class="field" style="margin: 1em 0;">
+        {{input class="message" type="text" value = message placeholder="Quote" required = true}}
+      </div>
+
+      <div class="ui hidden divider"></div>
+      <div class="ui hidden divider"></div>
+
+      <div class="field">
+        <button class="fluid ui blue button" value="submit" style="max-width: 100%; height: 50px;">
+          Submit
+        </button>
+      </div>
+    </form>
 
   {{/if}}
