--- a/SelfStart/SelfStartFrontEnd/app/templates/components/nav-bar.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/nav-bar.hbs
@@ -52,27 +52,25 @@
 
     <h2 class="ui fluid centered header" style="border-radius: 0.28571429rem;">Sign in</h2>
 
-
-    <div id="ui container" style="height: 355px; padding-left:5%; padding-right: 5%; padding-top: 2%">
+    <div class="content" style="padding-bottom: 0">
       <form class="cd-form floating-labels" {{action "submit" on="submit"}}>
 
-        <div class="field">
+        <div class="field" style="margin: 1em 0;">
           {{input class="email" type ="email" value=Email placeholder="Email" required = true}}
         </div>
-        <div class="field">
+        <div class="field" style="margin: 1em 0;">
           {{input class="lock" type ="password" value=PWord placeholder="Password" required = true}}
         </div>
 
-        <div class="field">
-          <input type="checkbox" id="cd-checkbox-1">
-          <label for="cd-checkbox-1">Remember me</label>
+        <div class="field" style="margin: 1em 0;">
+          {{ui-checkbox label="Remember me" checked=checked onChange=(action (mut checked))}}
         </div>
 
-        <div class="field">
+        <div class="field" style="margin: 1em 0;">
           <button class="fluid ui blue button" style="max-width: 100%; height: 50px;">Login</button>
         </div>
 
-        <div class="field">
+        <div class="field" style="margin: 1em 0;">
           <p style="cursor: pointer; text-align: center;  text-decoration: underline; padding-top: 65px"{{action 'forgotPassword'}}>forgot your password?</p>
         </div>
 
@@ -84,18 +82,20 @@
 
     <h2 class="ui fluid centered header" style="border-radius: 0.28571429rem;">Sign in</h2>
 
-    <div id="ui container" style="height: 260px; padding-left:5%; padding-right: 5%; padding-top: 3%">
+    <!--style="height: 260px; padding-left:5%; padding-right: 5%; padding-top: 3%"-->
+
+    <div class="content" style="padding-bottom: 0">
     <p style="text-align: center;">Lost your password? Please enter your email address. You will receive a link to create a new password.</p>
       <form class="cd-form floating-labels" {{action "submit" on="submit"}}>
-        <div class="field">
+        <div class="field" style="margin: 1em 0;">
           {{input class="email" type ="email" value=Email placeholder="Email" required = true}}
         </div>
 
-        <div class="field">
+        <div class="field" style="margin: 1em 0;">
           <button class="fluid ui blue button" style="max-width: 100%; height: 50px;" value="Submit">Reset Password</button>
         </div>
 
-        <div class="field">
+        <div class="field" style="margin: 1em 0;">
           <p style="cursor: pointer; text-align: center;  text-decoration: underline; padding-top: 65px" {{action 'login'}}>Back to log-in</p>
         </div>
       </form>
