--- a/SelfStart/SelfStartFrontEnd/app/templates/components/welcome-page.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/welcome-page.hbs
@@ -19,10 +19,11 @@
           <!--<a href="/appointment"  class="ui large inverted download button" >-->
             <!--Book Appointment-->
           <!--</a>-->
-          <a href="/register"class="ui large inverted download button">
-            Register
-          </a>
-          <a href="/#"  class="ui large inverted basic button" >Ask a Physio</a>
+
+            {{register-user model=model}}
+
+          {{ask-a-physio}}
+
         </div>
 
       </div>
