--- a/SelfStart/SelfStartFrontEnd/public/assets/css/form-style.css
+++ b/SelfStart/SelfStartFrontEnd/public/assets/css/form-style.css
@@ -190,7 +190,7 @@ Form
   position: absolute;
   left: 0;
   top: 50%;
-  /*margin-top: -8px;*/
+  margin-top: -8px;
   width: 16px;
   height: 16px
 }
@@ -210,10 +210,10 @@ Form
 }
 .cd-form input[type="radio"] + label::after,
 .cd-form input[type="checkbox"] + label::after {
-  background-color: #2c97de;
+  background-color: #2c97de !important;
   background-position: center center;
   background-repeat: no-repeat;
-  box-shadow: 0 0 5px rgba(44, 151, 222, 0.4);
+  box-shadow: 0 0 5px rgba(44, 151, 222, 0.4) !important;
   display: none;
 }
 
@@ -228,7 +228,7 @@ Form
 .cd-form input[type="radio"]:focus + label::before,
 .cd-form input[type="checkbox"]:focus + label::before {
   /* add focus effect for radio and check buttons */
-  box-shadow: 0 0 5px rgba(44, 151, 222, 0.6);
+  box-shadow: 0 0 5px rgba(44, 151, 222, 0.6) !important;
 }
 .cd-form input[type="radio"]:checked + label::after,
 .cd-form input[type="checkbox"]:checked + label::after {
