--- a/SelfStart/SelfStartFrontEnd/app/templates/components/physio-nav.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/physio-nav.hbs
@@ -32,7 +32,7 @@
             <a href="/practitioner/clients" class="item">Clients</a>
             <a  href="/practitioner/rehabplans"class="item">Menu Builder</a>
             <a href="/practitioner/appointment" class="item">Appointments</a>
-            <a id="login" href="../" class="item">Log out</a>
+            <a id="login" class="item" onClick={{action "logout"}}>Log out</a>
           </div>
         </div>
       </div>
