--- a/SelfStart/SelfStartFrontEnd/app/templates/components/user-login.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/user-login.hbs
@@ -22,7 +22,7 @@
     </div>
 
     <div class = "inline">
-      <button class="ui blue button " {{action "submit"}}>Submit</button>
+      <button class="ui blue button " {{action "submit"}}>Login</button>
     </div>
 
   </form>
