--- a/SelfStart/SelfStartFrontEnd/app/templates/components/list-forms.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/list-forms.hbs
@@ -1,4 +1,4 @@
-<button class="ui mini circular labeled icon red button" {{action 'openModal'}}title="Delete">
+<button class="ui mini circular labeled icon green button" {{action 'openModal'}}>
   <i class="remove icon"></i>
   Add Assessment Test
 </button>
