--- a/SelfStart/SelfStartFrontEnd/app/templates/components/book-appointment.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/book-appointment.hbs
@@ -1,44 +1,44 @@
+<div class="masthead segment bg2">
+  <div class="ui container">
+    <div class="introduction">
+      <h1 class="ui inverted header">
+        <span class="library" style="font-size: 1.25em">Book appointments</span>
+      </h1>
+    </div>
+  </div>
+</div>
 
+<br><br>
 <link integrity="" rel="stylesheet" href="/assets/css/form-style.css"> <!-- Resource style -->
 
 
 <form class="cd-form floating-labels" {{action "save" on="submit"}} style="padding-right: 10em; padding-left: 10em">
 
-  <br><br>
-  <fieldset>
-    <legend>Book Appointment</legend>
 
-
-    <label class="cd-label">Select Physiotherapist</label>
-    <p class="cd-select icon">
-      <select class="people" value ={{selectphysio}} onchange={{action "updateValue" value="target.value"}} >
-        <option value=""  selected disabled hidden>Select Physiotherapist</option>
-        {{#each getphysio as |phsio|}}
-          <option value={{phsio.id}}>
-            {{phsio.givenName}}
-          </option>
-        {{/each}}
-      </select>
-    </p>
-  </fieldset>
+  <label class="cd-label">Select Physiotherapist</label>
+  <p class="cd-select icon">
+    <select class="people" value ={{selectphysio}} onchange={{action "updateValue" value="target.value"}} >
+      <option value=""  selected disabled hidden>Select Physiotherapist</option>
+      {{#each getphysio as |phsio|}}
+        <option value={{phsio.id}}>
+          {{phsio.givenName}}
+        </option>
+      {{/each}}
+    </select>
+  </p>
 
 </form>
-
-
-
+<br><br>
 {{as-calendar
   title="Schedule"
   occurrences=occurrences
   defaultTimeZoneQuery="Toronto|New York"
-  showTimeZoneSearch=false
   dayStartingTime="8:00"
   dayEndingTime="20:00"
   timeSlotDuration="00:30"
   onAddOccurrence=(action "calendarAddOccurrence")
   onUpdateOccurrence=(action "calendarUpdateOccurrence")
-  onRemoveOccurrence=(action "calendarRemoveOccurrence")
-  onClickOccurrence = (action "calendarUpdateOccurrence")
-}}
+  onRemoveOccurrence=(action "calendarRemoveOccurrence")}}
 
 
 
@@ -46,57 +46,54 @@
   <form class="cd-form floating-labels">
     <div class="scrolling content" >
 
-    <fieldset>
-      <legend>Book Appointment</legend>
-      <label class="cd-label"> practitioner </label>
-      <h2>{{familyName}} {{givenName}}</h2>
-      <br>
+      <fieldset>
+        <legend>Book Appointment</legend>
+        <label class="cd-label"> Physiotherapist</label>
+        <p>{{familyName}} {{givenName}}</p>
+        <br>
 
-      <label class="cd-label">Select Type</label>
-      <p class="cd-select icon">
-
-        <select class="layer" value ={{selectAppointmentType}} onchange={{action "updateTime" value="target.value"}} required = true>
-          <option value=""  selected disabled hidden>Select type</option>
-          <option value="i">
-            Initial Assessment
-          </option>
-          <option value="t">
-            Treatment
-          </option>
-
-        </select>
-      </p>
-
-
-      <div class="icon">
-        <label class="cd-label">Reason</label>
-
-        {{input class="star" type="text" value = Reason required = true}}
-      </div>
-
-      <div class="icon">
-        <label class="cd-label">Other</label>
-        {{input  class="user" type="text" value = Other}}
-      </div>
-
-      <label class="cd-label">Select Time Slot</label>
-      <p class="cd-select icon">
-
-        <select class="date" value ={{selectedTime}} onchange={{action "setselectedtime" value="target.value"}} required = true>
-          <option value=""  selected disabled hidden>Select TimeSlot</option>
-          {{#each timeSlots as |timeslot|}}
-            <option value={{timeslot.time}}>
-              {{timeslot.value}}
+        <label class="cd-label">Select Type</label>
+        <p class="cd-select icon">
+          <select class="selectedAppointment" value ={{selectAppointmentType}} onchange={{action "updateTime" value="target.value"}}>
+            <option value=""  selected disabled hidden>Select type</option>
+            <option value="i">
+              Initial Assessment
             </option>
-          {{/each}}
-        </select>
-      </p>
+            <option value="t">
+              Treatment
+            </option>
 
-      <div>
-        <button class="ui fluid negative button" {{action "cancel_appointment"}}>Cancel</button>
-        <button class="ui fluid positive button" {{action "book_appointment"}}>Submit</button>
-      </div>
-    </fieldset>
+          </select>
+        </p>
+
+
+        <div class="icon">
+          <label class="cd-label">Reason</label>
+          {{input class="star" type="text" value = Reason}}
+        </div>
+
+        <div class="icon">
+          <label class="cd-label">Other</label>
+          {{input  class="user" type="text" value = Other}}
+        </div>
+
+        <label class="cd-label">Select Time Slot</label>
+        <p class="cd-select icon">
+          <select class="people" value ={{selectedTime}} onchange={{action "setselectedtime" value="target.value"}} >
+            <option value=""  selected disabled hidden>Select TimeSlot</option>
+            {{#each timeSlots as |timeslot|}}
+              <option value={{timeslot.time}}>
+                {{timeslot.value}}
+              </option>
+            {{/each}}
+          </select>
+        </p>
+
+        <div>
+          <button class="ui fluid negative button" {{action "cancel_appointment"}}>Cancel</button>
+          <button class="ui fluid positive button" {{action "book_appointment"}}>Submit</button>
+        </div>
+      </fieldset>
     </div>
   </form>
 {{/ui-modal}}
