--- a/SelfStart/SelfStartFrontEnd/app/templates/components/physio-nav.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/physio-nav.hbs
@@ -29,7 +29,6 @@
           </div>
 
           <div class="right menu inverted">
-            <a class="item"><div id="SkypeButton_Call"></div></a>
             <a href="/practitioner/clients" class="item">Clients</a>
             <a  href="/practitioner/exercises"class="item">Exercise</a>
             <a  href="/practitioner/rehabplans"class="item">Menu Builder</a>
@@ -41,6 +40,7 @@
     </div>
 
     {{yield}}
+    <div id="SkypeButton_Call" style="position: fixed; right: 0; bottom: 0"></div>
 
   </div>
 </div>
