added pre token

--- a/SelfStart/SelfStartFrontEnd/app/templates/components/book-appointment.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/book-appointment.hbs
@@ -2,7 +2,7 @@
   <div class="ui container">
     <div class="introduction">
       <h1 class="ui inverted header">
-        <span class="library" style="font-size: 1.25em">Book appointments</span>
+        <span class="library" style="font-size: 1.25em">Book appointment</span>
       </h1>
     </div>
   </div>
