--- a/SelfStart/SelfStartFrontEnd/app/templates/components/client-nav.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/client-nav.hbs
@@ -23,10 +23,9 @@
             <!--<a  href="/"class="item">Initial Intake</a>-->
             <a href="../images" class="item">Upload Photos</a>
             <!--<a  href="/"class="item">Transations</a>-->
-            <!--<a  href="/"class="item">Settings</a>-->
-
             <a href="/client/resources" class="item">Resources</a>
             <a href="/client/appointment" class="item">Book Appointment</a>
+            <a  href="/client/settings"class="item">Settings</a>
             <a id="login" href="../" class="item">Log out</a>
           </div>
         </div>
