--- a/SelfStart/SelfStartFrontEnd/app/templates/components/client-nav.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/client-nav.hbs
@@ -21,7 +21,7 @@
           <div class="right menu inverted">
             <a  href="/client/exercise-menu"class="item">Exercise Menu</a>
             <!--<a  href="/"class="item">Initial Intake</a>-->
-            <a href="../images" class="item">Upload Photos</a>
+            <a href="/client/upload-photos" class="item">Upload Photos</a>
             <!--<a  href="/"class="item">Transations</a>-->
             <a href="/client/resources" class="item">Resources</a>
             <a href="/client/appointment" class="item">Book Appointment</a>
